[metadata]
name = resc
description = RESC(RESource Checker)
long_description = file: README.md
author = tatsuya.s
version = file: VERSION
url = https://github.com/tatsuya4649/resc
license_file = LICENSE

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude=tests
