[metadata]
name = resc
description = RESC(RESource Checker)
long_description_content_type = text/markdown
long_description = file: README.md
author = tatsuya.s
url = https://github.com/tatsuya4649/resc
license_file = LICENSE
classifiers =
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License


[options]
zip_safe = False
include_package_data=True
packages = find:

[options.packages.find]
exclude=tests

[options.entry_points]
console_scripts =
	resc = resc.__main__:main
